uubloomington/uubloomington/static/css/uubloomington.css
/* ... */
.events-container li > .event-info {
    color: var(--accent-text-color);
}

/*.card-container {*/
/*    display: grid;*/
/*    grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));*/
/*    gap: var(--standard-gap);*/
/*}*/

.block-card_container > :nth-child(2n) {
    page-break-after: always;
}

.block-card_container:has(:nth-child(4)):not(:has(:nth-child(5))) > * {
    flex-basis: 40%;
}

.block-card_container,
.card-container {
    display: flex;
    gap: var(--standard-gap);
    flex-wrap: wrap;
    justify-content: center;
}

/*The above is awesome, let's revisit it in the future when more browsers support :has()*/

.block-card,
.card {
    font-family: "League Spartan Variable";
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background: var(--card-background-color);
    /*border: 1px solid var(--accent-color);*/
    border-radius: var(--standard-radius);
    /*padding: 1rem;*/
    overflow: clip;
    flex-basis: 30%;
    flex-grow: 1;
}

.block-card:not(:has(> .card-action)),
.card:not(:has(> .card-action)) {
    padding-bottom: 1rem;
}

.block-card_container > .block-card,
.card-container > .card {
    max-width: 41rem;
    /*This is a weird value. Keeps cards from being full-width if they are alone on a row,*/
    /*but also allows 2 cards across to fill the fill width of <main/>.*/
}

:where(.card-container.has_4) .card {
    flex-basis: 40%;
}

@media screen and (max-width: 60rem) {
    .block-card,
    .card {
        flex-basis: 40%; !important;
    }
}

@media screen and (max-width: 40rem) {
    .block-card,
    .card {
        flex-basis: 100%; !important;
    }
}

.block-card:not(.upcoming-service):not(.badges) > :not(img),
.card:not(.upcoming-service):not(.badges) > :not(img) {
    margin-inline: 1rem;
}

.block-card > img,
.card > img {
    /*margin: -1rem -1rem -1rem -1rem;*/
    width: 100%;
    height: auto;
}

.block-card > h2,
.card h2 {
    text-align: center;
    margin-top: 0.5rem;
    font-variation-settings: "wght" 450;
    font-size: 1.8rem;
}

.block-card h2:first-child,
.card h2:first-child {
    margin-top: var(--standard-gap);
}

.block-card h3,
.card h3 {
    font-size: 1.4rem;
    margin-top: initial;
    margin-bottom: initial;
}

.block-card h4,
.card h4 {
    font-size: initial;
    margin-bottom: initial;
    margin-top: initial;
}

.card-action {
    align-self: center;
    margin-top: auto;
    /*margin-bottom: calc(-2.5rem - 6px);*/
    padding: 1rem 1.5rem 0.85rem;
    border: var(--standard-border-thickness) solid var(--accent-color);
    border-radius: var(--standard-radius);
    background: unset;
    color: var(--text-color);
    text-decoration: none;
    transition: background var(--hover-transition-time), color var(--hover-transition-time);
    margin-bottom: 1rem;
    font-variation-settings: "wght" 450;
}

.card-action:focus,
.card-action:hover {
    background: var(--accent-color);
    color: white;
    transition: background var(--hover-transition-time), color var(--hover-transition-time);
}

.card > .events-container ul {
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
}

.card > .events-container h3 {
    font-variation-settings: "wght" 450;
}

.card.badges > ul {
    padding: 1rem;
    display: flex;
    flex-direction: initial;
    justify-content: center;
    gap: 1rem;
    flex-wrap: wrap;
}

.card.badges > a {
    display: block;
    width: fit-content;
    height: fit-content;
}

.card.badges > ul {
    list-style: none;
}

.card.badges > ul > li {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: min-content;
    text-align: center;
    margin: auto;
}

.card.badges img {
    border-radius: 0;
}

@media screen and (min-width: 63rem) {
    .card.horizontal {
        flex-direction: row;
        padding: 1rem;
    }
    .card.horizontal > h2 {
        white-space: nowrap;
        justify-self: center;
    }
    .card.horizontal > p {
        align-self: center;
        height: min-content;
    }
}

.event-title {
    display: flex;
}

.event-title a {
    margin-left: auto;
    margin-right: 0.25rem;
    white-space: nowrap;
}

.events-container.services li {
    min-height: 3rem;
}

/*.event-title > a {*/
/*    text-decoration: none;*/
/*    color: black;*/
/*    font-size: larger;*/
/*    font-weight: bold;*/
/*}*/

/*.events-container > h2 {*/
/*    margin-bottom: 10px;*/
/*}*/

/*.events-container li:hover {*/
/*    box-shadow: 0 0 3px inset black;*/
/*}*/

/*.events-container li:hover a {*/
/*    text-decoration: underline;*/
/*}*/

/*Footer*/
footer {
    /*max-width: var(--page-width);*/
    width: 100%;
    /*padding: 0 calc(calc(100% - 11in) / 2);*/
    /*min-height: 20rem;*/
    height: auto;
    padding: 1.5rem;
    margin-top: auto;
    margin-bottom: 0;
    background: var(--secondary-accent-color);
    color: white;
    display: grid;
    /*grid-template-columns: 1.5fr repeat(4, 1fr);*/
    gap: 1.5rem;
}

footer a:link {
    color: var(--dark-link-color);
}

footer a:visited {
    color: var(--dark-visited-link-color);
}

footer > div {
    flex-grow: 1;
}

footer .nav {
    list-style: none;
}

footer .nav > li ul {
    display: none;
}

footer .menu-toggle {
    display: none;
}

footer .block-image img {
    max-width: 100%;
    height: auto;
    max-height: 20rem;
}

footer > .footer-content {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    margin-inline: auto;
    text-align: center;
}

.footer-content > * {
    margin-inline: auto;
}

footer > .footer-content > * {
}

.minister-feature {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.minister-feature > span > :not(p:first-of-type):not(img):not(h3):not(h4) {
    display: none;
}

.minister-feature h3 {
    margin-bottom: 0.5rem;
}

.minister-feature h4 {
    margin-bottom: 0.25rem;
}

/*End Footer*/

.sidebar {
    padding: 0.75rem;
    padding-top: 1rem;
    font-family: "League Spartan Variable";
    display: flex;
    flex-direction: column;
}
/* ... */

